LIST OF CHANGES

release 50.10
  - RefMaker: generate blat 2bit genome references
  - bam_alignment.pl: enforce to have id_run and position defined. It's
    needed to create an old-style bamflagstats autoqc result object, see
    https://github.com/wtsi-npg/npg_qc/pull/342.

release 50.9
  - fix bug that causes the symlink of the .fa file in the bowtie2
    directory to point to the wrong location

release 50.8
  - replace bamcheck file by 2x filtered samtools stats files

release 50.7
  - bam alignment:
      remove redundant not_strip_bam_tag flag
      remove do_markduplicates flag and always call mark duplicates
  - bam mark duplicates:
      drop replace_file flag, always run file moves
      derive metrics_file attribute from teh output file name and then rename the file
      to be forward compatible with pending changes in bam_flagstats, call bam_flagstats
        parser via top-level execute() method ot be forward compatible
      bam_flagstats check is serialized in the same way as it is done in post-p4 flow

release 50.6
  - mark duplicates:
      - tag stripper is not used any longer - remove code and
        remove option
      - stop using Picard estimate library complexity since
        it is not used in p4 flows, remove option
      - do not check paths of live tools in tests
      - subset attribute replaces human_split
      - drop sort_input option since input is always gets sorted
  - seq alignment:
      - remove dependency on the autoqc wrapper object
      - drop not_strip_bam_tag, no_estimate_library_complexity and
        sort_input command line options when calling duplicates
        marking script
      - use subset option instead of human_split option when calling
        duplicates marking split

release 50.5
  - removed unused modules and scripts
  - use 'subset' option when creating bam_flagstats result object

release 50.4
  - Ref maker - stop supporting gcbias check, ie do not run gcn_maker